WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212535
[Cocoa] EME should return more helpful error code during key exchange
https://bugs.webkit.org/show_bug.cgi?id=212535
Summary
[Cocoa] EME should return more helpful error code during key exchange
Jer Noble
Reported
2020-05-29 11:10:10 PDT
[Cocoa] EME should return more helpful error code during key exchange
Attachments
Patch
(4.23 KB, patch)
2020-05-29 11:17 PDT
,
Jer Noble
eric.carlson
: review+
Details
Formatted Diff
Diff
Patch for landing
(4.26 KB, patch)
2020-05-31 11:53 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2020-05-29 11:14:13 PDT
<
rdar://problem/60439979
>
Jer Noble
Comment 2
2020-05-29 11:17:32 PDT
Created
attachment 400603
[details]
Patch
Eric Carlson
Comment 3
2020-05-29 13:13:20 PDT
Comment on
attachment 400603
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=400603&action=review
> Source/WebCore/platform/graphics/avfoundation/objc/CDMInstanceFairPlayStreamingAVFObjC.mm:1192 > + // to provide, signal this state by "suceeding", but set the key status
s/suceeding/succeeding/
Jer Noble
Comment 4
2020-05-31 11:53:04 PDT
Created
attachment 400708
[details]
Patch for landing
EWS
Comment 5
2020-05-31 12:52:58 PDT
Committed
r262365
: <
https://trac.webkit.org/changeset/262365
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 400708
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug